--- a/front-end/views/index.html
+++ b/front-end/views/index.html
@@ -4,11 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Korean-Portuguese Vocabulary</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="/front-end/styles/index.css" />
   </head>
   <body>
+    <nav class="navbar navbar-dark">
+      <img
+        id="IconFlash"
+        src="/front-end/assets/card-file-box-svgrepo-com.svg"
+        alt="Icon"
+      />
+      <a class="navbar-brand" href="#">FlashCards</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link active" href="#">Conjuntos</a>
+          <a class="nav-item nav-link" href="#">Perfil</a>
+        </div>
+      </div>
+    </nav>
     <h1>Korean-Portuguese Vocabulary</h1>
     <div id="wordsContainer"></div>
     <script src="/front-end/scripts/showWords.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
